<resources>
    <string name="app_name">MTG Manager</string>
    <string name="activity_name_edit_deck">Edit deck</string>
    <string name="sample_deck_name">Feel the Burn</string>

    <string name="action_create_deck">Create deck</string>
    <string name="action_search_cards">Search for cards</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_increment_card_copies">Increment number of card copies</string>
    <string name="action_decrement_card_copies">Decrement number of card copies</string>
    <string name="action_delete_card_copies">Delete card copies</string>
    <string name="action_add_card">Add card to deck</string>
    <string name="action_edit_deck">Edit deck</string>
    <string name="action_delete_deck">Delete Deck</string>
    <string name="action_up">Navigate Up</string>
    <string name="action_save_deck">SAVE</string>
    <string name="action_retry">RETRY</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="hint_deck_name">Deck Name</string>
    <string name="hint_card_name">Card Name</string>
    <string name="empty_deck_list">You don\'t have any decks</string>
    <string name="no_cards_found">No cards found</string>
    <string name="no_network_connection">No network connection</string>
    <string name="error_loading_search_results">Error loading search results</string>
    <string name="failed_to_download_sample_deck">Failed to download Sample Deck: Feel the Burn</string>
    <string name="deck_name_already_exists">A deck with that name already exists.</string>
    <string name="deck_name_cant_be_null">Deck name can\'t be null.</string>

    <plurals name="deck_extra_info">
        <item quantity="one">%1$d card - %2$s</item>
        <item quantity="other">%1$d cards - %2$s</item>
    </plurals>
    <string name="deck_color_breakdown">Deck contents: %1$d percent Black, %2$d percent Blue,
        %3$d percent Green, %4$d percent Red, %5$d percent White, %6$d Colorless</string>

    <string name="card_details_label_name">Name:</string>
    <string name="card_details_label_quantity">Quantity:</string>
    <string name="card_details_label_mana_cost">Mana Cost:</string>
    <string name="card_details_label_converted_mana_cost">CMC:</string>
    <string name="card_details_label_types">Types:</string>
    <string name="card_details_label_oracle_text">Oracle Text:</string>
    <string name="card_details_label_flavor_text">Flavor Text:</string>
    <string name="card_details_label_power_toughness">P/T:</string>
    <string name="card_details_power_toughness">%1$s/%2$s</string>
    <string name="card_details_label_loyalty">Loyalty:</string>
    <string name="card_details_label_set">Set:</string>
    <string name="card_details_label_artist">Artist:</string>

    <string name="widget_label_color_black">Black</string>
    <string name="widget_label_color_blue">Blue</string>
    <string name="widget_label_color_green">Green</string>
    <string name="widget_label_color_red">Red</string>
    <string name="widget_label_color_white">White</string>
    <string name="widget_label_colorless">Colorless</string>

    <!-- Placeholder Text -->
    <string name="card_list_item_numb_copies_placeholder">99</string>
    <string name="card_details_name_placeholder">[Card Name]</string>
    <string name="card_details_quantity_placeholder">99</string>
    <string name="card_details_mana_cost_placeholder">99</string>
    <string name="card_details_cmc_placeholder">99</string>
    <string name="card_details_types_placeholder">[Type - Subtype]</string>
    <string name="card_details_oracle_text_placeholder">[This is a long Oracle Text,  This is a
        long Oracle Text, This is a long Oracle Text, This is a long Oracle Text, This is a long
        Oracle Text, This is a long Oracle Text]</string>
    <string name="card_details_flavor_text_placeholder">[Flavor Text]</string>
    <string name="card_details_power_toughness_placeholder">99/99</string>
    <string name="card_details_loyalty_placeholder">99</string>
    <string name="card_details_set_placeholder">[Set Name]</string>
    <string name="card_details_artist_placeholder">[Artist Name]</string>
    <string name="edit_card_list_item_set_name_placeholder">Battle for Zendikar</string>
    <string name="edit_card_list_item_card_name_placeholder">Akoum Hellkite</string>
    <string name="edit_card_list_item_numb_copies_placeholder">3</string>
    <string name="deck_list_deck_name_placeholder">[Deck Name]</string>
    <string name="search_card_list_item_card_name_placeholder">[Card Name]</string>

</resources>
