<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:background="@color/card_details_grid_layout_background_color"
    android:padding="@dimen/card_details_gridlayout_padding">

    <TextView
        android:id="@+id/cardNameLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_name" />

    <TextView
        android:id="@+id/cardName"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_name_placeholder" />

    <TextView
        android:id="@+id/cardQuantityLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_quantity" />

    <TextView
        android:id="@+id/cardQuantity"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_quantity_placeholder" />

    <TextView
        android:id="@+id/cardManaCostLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_mana_cost" />

    <TextView
        android:id="@+id/cardManaCost"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_mana_cost_placeholder" />

    <TextView
        android:id="@+id/cardCMCLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_converted_mana_cost" />

    <TextView
        android:id="@+id/cardCMC"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_cmc_placeholder" />

    <TextView
        android:id="@+id/cardTypesLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_types" />

    <TextView
        android:id="@+id/cardTypes"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_types_placeholder" />

    <TextView
        android:id="@+id/cardOracleTextLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_oracle_text" />

    <TextView
        android:id="@+id/cardOracleText"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_oracle_text_placeholder" />

    <TextView
        android:id="@+id/cardFlavorTextLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_flavor_text" />

    <TextView
        android:id="@+id/cardFlavorText"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/card_details_flavor_text_placeholder" />

    <TextView
        android:id="@+id/cardPowerToughnessLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_power_toughness" />

    <TextView
        android:id="@+id/cardPowerToughness"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_power_toughness_placeholder" />

    <TextView
        android:id="@+id/cardLoyaltyLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_loyalty" />

    <TextView
        android:id="@+id/cardLoyalty"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_loyalty_placeholder" />

    <TextView
        android:id="@+id/cardSetLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_set" />

    <TextView
        android:id="@+id/cardSet"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_set_placeholder" />

    <TextView
        android:id="@+id/cardArtistLabel"
        style="@style/CardDetailsGridLabelItem"
        android:layout_width="@dimen/card_details_text_label_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_label_artist" />

    <TextView
        android:id="@+id/cardArtist"
        style="@style/CardDetailsGridItem"
        android:layout_width="@dimen/card_details_text_value_width"
        android:layout_height="wrap_content"
        android:text="@string/card_details_artist_placeholder" />

</GridLayout>