<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/create_deck_dialog_padding"
    app:theme="@style/OtherColorAccentTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_create_deck"
        android:textSize="@dimen/create_deck_header_text_size"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/inputDeckName"
        android:layout_width="@dimen/create_deck_input_width"
        android:layout_height="wrap_content"
        android:hint="@string/hint_deck_name"
        android:textSize="@dimen/create_deck_input_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/actionCancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/actionSave"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_save" />
    </LinearLayout>
</LinearLayout>


