<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/edit_card_list_item_padding">

    <LinearLayout
        android:id="@+id/cardCopiesControls"
        android:layout_width="@dimen/edit_card_list_item_controls_width"
        android:layout_height="@dimen/edit_card_list_item_controls_height"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/actionIncrementCardCopies"
            style="@style/IconButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:src="@drawable/ic_expand_less_black_36dp"
            android:contentDescription="@string/action_increment_card_copies"/>

        <TextView
            android:id="@+id/cardNumbCopies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_card_list_item_numb_copies_text_size"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/edit_card_list_item_numb_copies_text_color"
            android:text="@string/edit_card_list_item_numb_copies_placeholder" />

        <ImageButton
            android:id="@+id/actionDecrementCardCopies"
            style="@style/IconButton"
            android:tint="@color/icon_button_tint_color"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:src="@drawable/ic_expand_more_black_36dp"
            android:contentDescription="@string/action_decrement_card_copies"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/cardImage"
        android:layout_width="@dimen/edit_card_list_item_image_width"
        android:layout_height="@dimen/edit_card_list_item_image_height"
        android:layout_toEndOf="@id/cardCopiesControls"
        android:layout_marginEnd="@dimen/edit_card_list_item_image_margin_end"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/actionDeleteCardCopies"
        android:layout_toEndOf="@id/cardImage"
        android:orientation="vertical">
        <TextView
            android:id="@+id/cardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_card_list_item_card_name_text_size"
            android:textStyle="bold"
            android:text="@string/edit_card_list_item_card_name_placeholder"/>
        <TextView
            android:id="@+id/setName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_card_list_item_set_name_text_size"
            android:textStyle="italic"
            android:text="@string/edit_card_list_item_set_name_placeholder"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/actionDeleteCardCopies"
        style="@style/IconButton"
        android:layout_width="@dimen/icon_button_size"
        android:layout_height="@dimen/icon_button_size"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_clear_black_36dp"
        android:contentDescription="@string/action_delete_card_copies"/>
</RelativeLayout>
